feat: add PWA support with service worker, manifest and offline caching

--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/my-home.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0" />
   <meta name="description"
     content="S-M-D HOME — Proje vitrin ve launcher sayfası. Tüm projelerine tek noktadan eriş." />
+
+  <!-- PWA Meta Tags -->
+  <meta name="theme-color" content="#0f518c" />
+  <meta name="application-name" content="S-M-D HOME" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+  <meta name="apple-mobile-web-app-title" content="S-M-D HOME" />
+  <link rel="apple-touch-icon" href="/pwa-icon-192x192.png" />
+  <meta name="msapplication-TileColor" content="#0f518c" />
+  <meta name="msapplication-TileImage" content="/pwa-icon-192x192.png" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
